--- a/k8s-rbac/cluster-admin-rolebinding.yaml
+++ b/k8s-rbac/cluster-admin-rolebinding.yaml
@@ -9,4 +9,4 @@ roleRef:
 subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: User
-  name: "johndoe@jcorioland.onmicrosoft.com"
+  name: "ahj@nine.dk"
