--- a/k8s-rbac/cluster-admin-rolebinding.yaml
+++ b/k8s-rbac/cluster-admin-rolebinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: aks-cluster-admins
+  name: aad-cluster-admins
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: User
-  name: "ahj@nine.dk"
+  - apiGroup: rbac.authorization.k8s.io
+    kind: Group
+    name: "ea82558a-9094-46f0-810d-3d4b54d51d3c" # AAD Group Object ID
